DETE_Sandbox/src/objects/OccupationTechLineItem__c.object
<CustomObject>
    <description>Technology and its related Occupations</description>
    <fields>
        <fullName>Occupation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Occupation</label>
        <referenceTo>Occupation__c</referenceTo>
        <relationshipLabel>OccupationTechLineItems</relationshipLabel>
        <relationshipName>OccupationTechLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Occupation Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technology</label>
        <referenceTo>Technology__c</referenceTo>
        <relationshipLabel>OccupationTechLineItems</relationshipLabel>
        <relationshipName>OccupationTechLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>OccupationTechLineItem</label>
    <nameField>
        <displayFormat>OT-{0000}</displayFormat>
        <label>OccupationTechLineItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OccupationTechLineItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>